--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 <div>
     <pre><b>Educational deatials </b></pre>
     <br/>
-    <a href="/edu.html" target="_main">Click</a>
+    <a href="./edu.html" target="_main">Click</a>
 </div>
     <br/>
     <hr/>
 <div>
     <p><b>Experiment lists</b></p>
     <br/>
-    <a href="/exp.html" target="__main">Click</a>
+    <a href="./exp.html" target="__main">Click</a>
     <br/>
 </div>
     <hr/>
 <div>
     <p><b>Project Lists</b></p>
     <br/>
-    <a href="/proj.html" target="___main">Click</a>
+    <a href="./proj.html" target="___main">Click</a>
     <br/>
 </div>
     <hr/>
